Sun Mar 25 01:40:24 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* parser.c: initialization code must be run before deciding
	  which parser to launch.

Sun Mar 25 01:03:10 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Makefile.am parserold.c: added back the 1.8.11 parser for compatibility
	* README: updated
	* SAX.c: integrate back 1.8.11 callback code and call it when
	  we are using the old parser
	* entities.c: fixed a small problem
	* parser.[ch]: allow to use either parser, add xmlUseNewParser(),
	  and modify the Initialization code to check LIBXML_USE_NEW_PARSER
	  or LIBXML_USE_OLD_PARSER
	* tester.c: make it use the new parser by default, but check
	  LIBXML_USE_OLD_PARSER and add the --oldparser option

Sat Mar 24 09:41:28 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

        Applied patch from Darin:
	* tree.[ch], .cvsignore: Darin fixed some CPP crap nobody noticed so far

2001-03-24  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Added install-data-local target to create the
	libxml symlink.

Fri Mar 23 19:17:45 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* parser.c: remove some cases where an encoding error
	  disable loading corrupted documents generated by previous version

Thu Mar 22 15:50:27 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Makefile.am: fixed bug 51876

Wed Mar 21 18:18:45 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* HTMLparser.c parser.c: found a hard to trigger but real I/O
	  buffer problem fixed the multiple points where this needed fixing

Wed Mar 21 14:50:55 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* parser.c: make sure the full structure is NULL initialized
	  when allocated

Wed Mar 21 13:17:24 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

  It's hard to estimate how much I hated to do this, but it's done ...
  The best way to solve the I18N problen is unfortunately to fix libxml1
parser to at least deal correctly with UTF8 and ISO-Latin-1 encodings.